Segundo cambio incluido educación html

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <br>
     <footer>
       <p>
-            <a href="mailto:infosysiba2018@gmail.com">Contacto</a> | <a href="http://www.facebook.com" target="_blank">Redes Sociales</a> | Teléfono: (593)2-2999 555
+            <a href="mailto:infosysiba2018@gmail.com">Contacto</a> | <a href="https://www.facebook.com/patricio.cevallos.90" target="_blank">Redes Sociales</a> | Teléfono: (593)2-2999 555
       </p>
     </footer>
   </body>
