--- a/educacion.html
+++ b/educacion.html
@@ -64,6 +64,37 @@
          <td>2017</td>
        </tr>
      </table>
+     <form autocomplete="on" name="Agregar Estudios">
+       <fieldset>
+          <legend><h2> AGREGAR ESTUDIOS</h2></legend>
+          <label for="Anio">Año: </label>
+          <select name="Anio">
+            <option>1999</option>
+            <option>2000</option>
+            <option>2001</option>
+            <option>2002</option>
+            <option>2003</option>
+            <option>2004</option>
+            <option>2005</option>
+            <option>2006</option>
+            <option>2007</option>
+            <option>2008</option>
+            <option>2009</option>
+            <option>2010</option>
+          </select>
+          <br>
+          <br>
+          <label for="institucion">Institución: </label>
+          <input type="text" placeholder="Nombre de la Institución Educativa"name="" id="institucion" required>
+          <br>
+          <br>
+          <label for="lugar">Lugar: </label>
+          <input type="text" name="" id="lugar" required>
+          <br>
+          <br>
+          <input type="submit" name="Enviar" value="Enviar">
+       </fieldset>
+     </form>
      <footer>
        <p>
              <a href="mailto:infosysiba2018@gmail.com">Contacto</a> | <a href="https://www.facebook.com/patricio.cevallos.90" target="_blank">Redes Sociales</a> | Teléfono: (593)2-2999 555
